observability/monitoring/prometheus/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: grafana.demo.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: prometheus.demo.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
  - host: alertmanager.demo.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
